# pico-lcd-demo

gfx_pack/: CMakeLists.txt
gfx_pack/common/: CMakeLists.txt
gfx_pack/libraries/bitmap_fonts/: bitmap_fonts.cmake
gfx_pack/libraries/hershey_fonts/: hershey_fonts.cmake
gfx_pack/libraries/pico_graphics/: Makefile  cmake_install.cmake
